toolchains/eui-compiler/tests/error/baselines/malformed-comment/expect.txt
Error: malformed comment
<!--<?xml version='1.0' encoding='utf-8'?>
^
at line: 1, column: 1
at file: